--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
     	<artifactId>commons-compress</artifactId>
    	 	<version>1.19</version>
 	</dependency>
-	
+	<dependency>
+    	<groupId>org.zeroturnaround</groupId>
+    	<artifactId>zt-zip</artifactId>
+    	<version>1.13</version>
+	</dependency>
   </dependencies>
 </project>
