--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,54 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <archive>
+        	<manifest>
+        		<mainClass>net.rezxis.mchosting.host.HostServer</mainClass>
+        	</manifest>
+      	  </archive>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+       	<artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>net.rezxis.mchosting.host.HostServer</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
   <dependencies>
+  	<dependency>
+  	  <groupId>net.rezxis.mchosting</groupId>
+  	  <artifactId>Database</artifactId>
+  	  <version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  	  <groupId>net.rezxis.mchosting</groupId>
+  	  <artifactId>Network</artifactId>
+  	  <version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+      <groupId>com.github.docker-java</groupId>
+      <artifactId>docker-java</artifactId>
+      <!-- use latest version https://github.com/docker-java/docker-java/releases -->
+      <version>3.1.5</version>
+	</dependency>
   	<dependency>
   		<groupId>org.java-websocket</groupId>
   		<artifactId>Java-WebSocket</artifactId>
