--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-          <Encoding>UTF-8</Encoding>
+          <encoding>UTF-8</encoding>
           <archive>
         	<manifest>
         		<mainClass>net.rezxis.mchosting.host.HostServer</mainClass>
