--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+  <dependency>
+	  <groupId>org.projectlombok</groupId>
+	  <artifactId>lombok</artifactId>
+	  <version>1.18.12</version>
+	  <scope>provided</scope>
+	</dependency>
  	<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
 	<dependency>
       <groupId>org.yaml</groupId>
